--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         </a>
                     </li>
 
-                    <li class="nav-item"><a class="nav-link" href="LOGIN.html">Log in</a></li>
+                    <li class="nav-item"><a class="nav-link" href="LOGIN.HTML">Log in</a></li>
                     <li class="nav-item"><a class="nav-link" href="#carsContainer">Cars</a></li>
                     <li class="nav-item"><a class="nav-link" href="#about">About us</a></li>
                 </ul>
@@ -397,5 +397,6 @@
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-storage-compat.js"></script>
 
 </body>
+
 
 </html>
