--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ROOT CAR | Save Your Time</title>
-    <link rel="icon" type="image/png" href="car-rear-solid-full.svg">
+    <link rel="icon" type="image/png" href="img/car-rear-solid-full.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
@@ -165,7 +165,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="Gemini_Generated_Image_y478jny478jny478.png" class="d-block w-100" alt="...">
+                <img src="img/Gemini_Generated_Image_y478jny478jny478.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-md-block">
 
                 </div>
@@ -400,3 +400,4 @@
 
 
 </html>
+
