--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="add-car.html"
                             style="background: #0fb5f1; color: #000; font-weight: bold; border-radius: 5px; padding: 5px 15px; margin-right: 10px;">
-                            + أضف إعلانك
+                            + Add your ad
                         </a>
                     </li>
 
@@ -398,6 +398,4 @@
 
 </body>
 
-
 </html>
-
