--- a/add-car.html
+++ b/add-car.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>إضافة إعلان - Root Car</title>
+    <title>Add advertisement - Root Car</title>
     <link rel="icon" type="image/png" href="img/car-rear-solid-full.svg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -153,29 +153,29 @@
 
 
     <div class="upload-card">
-        <h2><i class="fa-solid fa-car-on me-2"></i> أعلن عن سيارتك مجاناً</h2>
+        <h2><i class="fa-solid fa-car-on me-2"></i> Add your car advertisement</h2>
         <form id="carForm">
             <div class="form-group">
-                <label>اسم السيارة (الموديل)</label>
-                <input type="text" id="brand" placeholder="مثال: BMW M4 2024" required>
+                <label>Car Name (Model)</label>
+                <input type="text" id="brand" placeholder="Example: BMW M4 2024" required>
             </div>
             <div class="form-group">
-                <label>السعر (Egp)</label>
-                <input type="number" id="price" placeholder="أدخل السعر" required>
+                <label>Price (Egp)</label>
+                <input type="number" id="price" placeholder="Enter price" required>
             </div>
             <div class="form-group">
-                <label>اختر صورة من جهازك</label>
+                <label>Choose image from your device</label>
                 <input type="file" id="photos" accept="image/*" required>
             </div>
             <div class="form-group">
-                <label>وصف إضافي (اختياري)</label>
-                <textarea id="description" rows="3" placeholder="حالة السيارة، الممشى..."></textarea>
+                <label>Additional description (optional)</label>
+                <textarea id="description" rows="3" placeholder="Car condition, mileage..."></textarea>
             </div>
             <div class="form-group">
-                <label>رقم واتساب البائع</label>
-                <input type="text" id="phone" placeholder="مثال: 201000000000" required>
+                <label>WhatsApp number of the seller</label>
+                <input type="text" id="phone" placeholder="Example: 201000000000" required>
             </div>
-            <button type="submit" id="submitBtn" class="submit-btn">نشر الإعلان الآن</button>
+            <button type="submit" id="submitBtn" class="submit-btn">Publish advertisement now</button>
         </form>
     </div>
 
@@ -201,7 +201,7 @@
         carForm.addEventListener('submit', async (e) => {
             e.preventDefault();
 
-            submitBtn.innerText = "جاري رفع الصورة... انتظر";
+            submitBtn.innerText = "Uploading image... Please wait";
             submitBtn.disabled = true;
 
             const imageFile = document.getElementById('photos').files[0];
@@ -222,7 +222,7 @@
                 const imgData = await imgResponse.json();
 
                 if (!imgData.success) {
-                    throw new Error("فشل رفع الصورة لموقع ImgBB");
+                    throw new Error("Failed to upload image. Please try again.");
                 }
 
                 const imageUrl = imgData.data.url;
@@ -236,15 +236,15 @@
                     createdAt: firebase.firestore.FieldValue.serverTimestamp()
                 });
 
-                alert('مبروك! تم نشر سيارتك بنجاح على Root Car');
+                alert('Congratulations! Your car has been successfully published on Root Car');
                 carForm.reset();
                 window.location.href = "index.html";
 
             } catch (error) {
                 console.error(error);
-                alert('حدث خطأ: ' + error.message);
+                alert('An error occurred: ' + error.message);
             } finally {
-                submitBtn.innerText = "نشر الإعلان الآن";
+                submitBtn.innerText = "Publish advertisement now";
                 submitBtn.disabled = false;
             }
         });
@@ -289,6 +289,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 
 </html>
