--- a/car-details.html
+++ b/car-details.html
@@ -130,7 +130,7 @@
     <div class="container">
         <div id="carDetailsLoader" class="text-center my-5">
             <div class="spinner-border text-info" style="width: 3rem; height: 3rem;" role="status"></div>
-            <p class="mt-3 fs-5 text-info">جاري تحميل تفاصيل السيارة...</p>
+            <p class="mt-3 fs-5 text-info">Loading car details...</p>
         </div>
 
         <div id="carContent" class="details-container d-none">
@@ -146,20 +146,20 @@
                     <div class="specs-list mb-4">
                         <div class="spec-item">
                             <i class="fa-solid fa-align-left me-2 text-info"></i> 
-                            <strong>الوصف:</strong> <br>
+                            <strong>Description:</strong> <br>
                             <p id="carDesc" class="mt-2 small text-light opacity-75" style="line-height: 1.6;">---</p>
                         </div>
                         <div class="spec-item">
                             <i class="fa-solid fa-user-shield me-2 text-info"></i> 
-                            <strong>الحالة:</strong> إعلان موثق
+                            <strong>Status:</strong> Verified Advertisement
                         </div>
                     </div>
 
                     <div class="d-grid gap-3">
                         <a id="whatsappLink" href="#" target="_blank" class="btn-whatsapp">
-                            <i class="fab fa-whatsapp"></i> تواصل عبر واتساب
+                            <i class="fab fa-whatsapp"></i> Contact via WhatsApp
                         </a>
-                        <p class="text-center small opacity-50 mb-0">تواصل مباشر مع صاحب الإعلان</p>
+                        <p class="text-center small opacity-50 mb-0">Direct contact with the advertiser</p>
                     </div>
                 </div>
             </div>
@@ -193,7 +193,7 @@
                     document.getElementById('carImg').src = car.image;
                     document.getElementById('carBrand').innerText = car.brand;
                     document.getElementById('carPrice').innerText = Number(car.price).toLocaleString('en-US') + ' EGP';
-                    document.getElementById('carDesc').innerText = car.description || 'لا يوجد وصف متاح لهذه السيارة.';
+                    document.getElementById('carDesc').innerText = car.description || 'No description available for this car.';
                     
                     // --- WhatsApp Logic ---
                     let phone = car.phone || "20123456789"; 
@@ -202,13 +202,13 @@
                         phone = '2' + phone;
                     }
 
-                    const message = encodeURIComponent(`أهلاً، أنا مهتم بسيارة (${car.brand}) المعروضة في موقع Root Car.`);
+                    const message = encodeURIComponent(`Hello, I'm interested in the car (${car.brand}) advertised on Root Car.`);
                     document.getElementById('whatsappLink').href = `https://api.whatsapp.com/send?phone=${phone}&text=${message}`;
 
                     document.getElementById('carDetailsLoader').classList.add('d-none');
                     document.getElementById('carContent').classList.remove('d-none');
                 } else {
-                    alert("الإعلان غير موجود.");
+                    alert("The advertisement does not exist.");
                     window.location.href = "index.html";
                 }
             }).catch(error => {
@@ -257,5 +257,4 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
